--- a/mastersgtp/src/main/resources/application.properties
+++ b/mastersgtp/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=mastersgtp
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/mastersgtp?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
