--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,18 @@
 services:
+  mysql:
+    image: mysql:8.0
+    environment:
+      MYSQL_ROOT_PASSWORD: my_secure_password   # Set the password directly here
+      MYSQL_DATABASE: mastersgtp?createDatabaseIfNotExist=true
+      MYSQL_PASSWORD: my_secure_password
+    volumes:
+      - mysql_data:/var/lib/mysql
+    ports:
+      - "3307:3306"
+    networks:
+      - mastersgtp-network
+    pull_policy: never
+
   backend:
     build:
       context: ./mastersgtp
@@ -8,9 +22,11 @@ services:
       - "8080:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=production
-      - SPRING_DATASOURCE_URL=jdbc:mysql://host.docker.internal:3306/mastersgtp?createDatabaseIfNotExist=true
-      - SPRING_DATASOURCE_USERNAME=${DB_USERNAME}
-      - SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/mastersgtp?createDatabaseIfNotExist=true
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=my_secure_password
+    depends_on:
+      - mysql
     networks:
       - mastersgtp-network
     restart: unless-stopped
@@ -31,3 +47,6 @@ services:
 networks:
   mastersgtp-network:
     driver: bridge
+
+volumes:
+  mysql_data:
